[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Gabriel Vieira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
pytest = "^7.4.2"
django-debug-toolbar = "^4.2.0"
psycopg2-binary = "^2.9.9"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
